--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=server_name;Database=db_name;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
