feat: docker configs, list notes, fix indicadores

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=server_name;Database=db_name;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  "DefaultConnection": "Server=LOCALHOST/IPV4,1400;Database=unecont;User Id=sa;Password=YouPassword123;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
